--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/express": "^5.0.0",
     "@types/lodash": "^4.17.13",
     "autoprefixer": "^10.4.20",
@@ -29,6 +30,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "express": "^4.21.1",
     "lodash": "^4.17.21",
